// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. does not render an image if display is not received 1`] = `<View />`;

exports[`2. does not render an image if ratio is not received 1`] = `<View />`;

exports[`3. renders an image with no caption 1`] = `
<View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      uri="https://imageserver/someImage"
    />
  </View>
</View>
`;

exports[`4. renders a caption if received 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          Some caption
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`5. renders a credit if received 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          SOME CREDIT
        </Text>
      </View>
    </View>
  </View>
</View>
`;
